# pico-template

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
ampel/: CMakeLists.txt  ampel-switch.c  main.c
blink/: CMakeLists.txt  blink.c  blink.h  picow_blink.c
freertos/: CMakeLists.txt
freertos/FreeRTOS/: CMakeLists.txt
freertos/blink/: CMakeLists.txt  main.cpp
freertos/multitasking/: CMakeLists.txt  main.cpp
hello/: CMakeLists.txt
mpu6050_i2c/: CMakeLists.txt
mqtt/: CMakeLists.txt
mqtt/include/: lwipopts.h  mqtt_config.h  wifi_config.h
mqtt/src/: picow_iot.cpp
